--- a/2022/3/2/일급컬렉션.md
+++ b/2022/3/2/일급컬렉션.md
@@ -1,1 +1,244 @@
 # 일급 컬렉션
+<a href="https://jojoldu.tistory.com/412" target="_blank">일급 컬렉션의 소개와 써야 할 이유</a>의 내용을 공부하기 위해 옮겨 적습니다.<br><br>
+일급 컬렉션이란 단어는 소트웍스 앤솔로지 의 객체지향 생활체조 파트에서 언급이 되었습니다.<br><br>
+규칙 8: 일급 콜렉션 사용<br><br>
+콜렉션을 포함한 클래스는 반드시 다른 멤버 변수가 없어야 한다는 규칙입니다.<br><br>
+간단하게 설명하자면 예를 들어, java Collection의 HashMap을 원시자료형이라고 생각하고,<br><br>
+이를 wrapping하는 것입니다.<br><br>
+이는 int를 wrapping하여 Integer로 사용하는 것과 유사합니다.<br><br>
+Collection을 wrapping하면서 클래스 내에 Collection을 제외하고 다른 멤버가 없는 상태를 **일급 컬렉션**이라고 합니다.<br><br>
+이처럼 일급 컬렉션을 사용하게 되면 4가지 장점이 있습니다.<br><br>
+
+## 1. 비지니스에 종속적인 자료구조
+
+예를 들어 로또 복권 게임을 만든다고 가정합니다.<br><br>
+규칙은 6개의 서로 중복되지 않는 번호가 존재하고, 보너스 번호가 없습니다.<br><br>
+이를 코드로 구현해보면<br><br>
+
+```java
+public class LottoService {
+    private static final int LOTTO_NUMBER_SIZE = 6;
+    
+    public void createLottoNumber() {
+        List<Long> lottoNumbers = createNonDuplicateNumbers();
+        validateSize(lottoNumbers);
+        validateDuplicate(lottoNumbers);
+        
+        //이후 로직 실행
+    }
+    
+    private void validateSize(List<Long> lottoNumbers) {
+        if(lottoNumbers.size() != LOTTO_NUMBER_SIZE) {
+            throw new IllegalArgumentException("로또 번호는 6개만 가능합니다.");
+        }
+    }
+    
+    priavate void validateDuplicate(List<Long> lottoNumbers) {
+        Set<Long> nonDuplicateNumbers = new HashSet<>(lottoNumbers);
+        if(nonDuplicateNumbers.size() != LOTTO_NUMBER_SIZE) {
+            throw new IllegalArgumentException("로또 번호들은 중복될 수 없습니다.");
+        }
+    }
+}
+```
+
+이렇게 서비스 메소드에서 비지니스 로직을 처리할 경우 나중에 문제가 생길 수 있습니다.<br><br>
+근데 문제를 읽어봐도 이해하지 못하겠습니다ㅠ<br><br>
+그래서 일단 문제는 넘어가고 이를 깔끔하고 해결하는 방법만 적어보려고 합니다.<br><br>
+6개의 중복되지 않는 숫자로만 이루어져 있는 자료형은 없습니다.<br><br>
+그래서 저희가 콜렉션을 이용하여 일급 컬렉션으로 직접 만들어야 합니다.<br><br>
+
+```java
+public class LottoTicket {
+    private final List<Long> lottoNumbers;
+    
+    public LottoTicket(List<Long> lottoNumbers) {
+        validateSize(lottoNumbers);
+        validateDuplicate(lottoNumbers);
+        this.lottoNumbers = lottoNumbers;
+    }
+    
+     private void validateSize(List<Long> lottoNumbers) {
+        if(lottoNumbers.size() != LOTTO_NUMBER_SIZE) {
+            throw new IllegalArgumentException("로또 번호는 6개만 가능합니다.");
+        }
+    }
+    
+    priavate void validateDuplicate(List<Long> lottoNumbers) {
+        Set<Long> nonDuplicateNumbers = new HashSet<>(lottoNumbers);
+        if(nonDuplicateNumbers.size() != LOTTO_NUMBER_SIZE) {
+            throw new IllegalArgumentException("로또 번호들은 중복될 수 없습니다.");
+        }
+    }
+}
+```
+이제 로또 번호가 필요한 모든 로직은 이 일급 컬렉션만 있으면 됩니다.<br><br>
+
+```java
+public class LottoServie {
+    public void createLottoNumber() {
+        LottoTicket lottoTicket = new LottoTicket(createNonDuplicateNumbers());
+        
+        //이후 로직 실행
+    }
+}
+```
+
+## 2. 불변
+
+일급 컬렉션은 **컬렉션의 불변을 보장**합니다.<br><br>
+java의 final은 불변을 보장하지 않으며 재할당만 금지합니다.<br><br>
+즉, final로 collection이 설정되고 비어있는 채로 생성되어도 여기에 값을 추가할 수 있습니다.<br><br>
+다만, final이기 때문에 이 참조형의 명칭으로 새로운 collection을 할당할 수는 없습니다.<br><br>
+즉, 불변성이 보장되지는 않고 재할당만 금지된다는 말입니다.<br><br>
+대규모 프로그램을 구현하다 보면 값을 바꿀 수 없게 만들어야 하는 상황이 오는데<br><br>
+이 때 유용하게 사용할 수 있는 방법이 바로 일급컬렉션입니다.<br><br>
+```java
+public class Orders {
+    private final List<Order> orders;
+    
+    public Orders(List<Order> orders) {
+        this.orders = orders;
+    }
+    
+    public long getAmountSum() {
+        return orders.stream()
+        .mapToLong(Order::getAmount)
+        .sum();
+    }
+}
+```
+위와 같이 콜렉션의 값을 변경할 수 있는 메소드가 없는 일급컬렉션을 만들면 불변컬렉션이 됩니다.<br><br>
+이 클래스는 생성자와 getAmountSum밖에 없기 때문에 새로 만들거나 값을 가져오는 것 밖에 없습니다.<br><br>
+
+# 3. 상태와 행위를 한 곳에서 관리
+
+일급 컬렉션의 세번째 장점은 **값과 로직이 함께 존재**한다는 것입니다.<br><br>
+이 부분은 enum클래스와도 일치하는데<br><br>
+예를 들어 여러 페이의 금액이 모여 있고, 이 중 NaverPay 금액의 합이 필요한 경우 아래와 같이 작성합니다.<br><br>
+```java
+@Test
+public void 로직이_밖에_있는_상태() {
+    //given
+    List<Pay> pays = ArrayList.asList(
+            new Pay(NAVER_PAY, 1000),
+            new Pay(NAVER_PAY, 1500),
+            new Pay(KAKAO_PAY, 2000),
+            new Pay(TOSS, 3000L));
+   
+   Long naverPaySum = pays.stream()
+             .filter(pay -> pay.getPayType().equals(NAVER_PAY))
+             .mapToLong(Pay::getAmount)
+             .sum();
+             
+   assertThat(naverPaySum).isEqualTo(2500);
+}
+```
+현재 코드 상에서는 리스트에 데이터를 담고, 서비스 또는 유틸클래스에서 필요한 로직을 수행하고 있습니다.<br><br>
+pays라는 데이터를 관리하는 컬렉션과 이를 계산해주는 메소드는 서로 관련이 있지만 코드 상에서는 전혀 그것이 표현되고 있지 않습니다.<br><br>
+이 문제를 일급컬렉션을 이용하여 해결할 수 있습니다.<br><br>
+```java
+public class PayGroup {
+    private List<Pay> pays;
+    
+    public PayGroup(List<Pay> pays) {
+        this.pay = pay;
+    }
+    
+    public Long getNaverPaySum() {
+        return pays.stream()
+        .filter(pay -> PayType.isNaverPay(pay.getPayType())
+        .mapToLong(pay::getAmount)
+        .sum();
+    }
+}
+```
+
+만약 다른 결제수단들의 합도 필요하다면 람다식을 이용하여 **리팩토링**도 가능합니다.<br><br>
+
+```java
+public class PayGroup {
+    private List<Pay> pays;
+    
+    public PayGroup(List<Pay> pays) {
+        this.pay = pay;
+    }
+    
+    pulbic Long getNaverPaySum() {
+        return getFilteredPays(pay -> PayType.isNaverPay(pay.getPayType()));
+    }
+    
+    public Long getKakaoPaySum() {
+        return getFilteredPays(pay -> payType.isKakaoPay(pay.getPayType()));
+    }
+    
+    priavate Long getFilteredPays(Predicate<Pay> predicate) {
+        return pays.stream()
+                .filter(predicate)
+                .mapToLong(Pay::getAmount)
+                .sum();
+    }
+}
+```
+
+이제 PayGroup이라는 일급 컬렉션이 있기 때문에 데이터와 행위가 한 곳에서 관리됩니다.<br><br>
+
+```java
+@Test
+public void 로직과_값이_한_곳에() {
+    //given
+    List<Pay> pays = ArrayList.asList(
+            new Pay(NAVER_PAY, 1000),
+            new Pay(NAVER_PAY, 1500),
+            new Pay(KAKAO_PAY, 2000),
+            new Pay(TOSS, 3000L));
+    
+    PayGroup payGroup = new PayGroup(pays);
+    
+    //when
+    Long naverPaySum = payGroup.getNaverPaySum();
+    
+    //then
+    asssertThat(naverPaySum).isEqualTo(2500);
+}
+```
+
+# 4. 이름이 있는 컬렉션
+
+마지막 장점으로 컬렉션에 이름을 붙일 수 있다는 점입니다.<br><br>
+같은 Pay들의 모임이지만 네이버Pay의 list와<br><br>
+카카오Pay의 list들은 엄연히 다릅니다.<br><br>
+이 둘을 구분하는 방법으로는 변수명을 다르게 짓는 방법이 있습니다.<br><br>
+
+```java
+@Test
+public void 컬렉션을_변수명으로() {
+    //given
+    List<Pay> naverPay = createNaverPays();
+    List<Pay> kakaoPay = createKakaoPays();
+    
+    //when
+    
+    //then
+}
+```
+
+위 코드의 단점으로는 검색이 어렵다는 점입니다.<br><br>
+네이버페이가 어떻게 사용되는지 알고 싶을 때 변수명으로만 검색을 할 수 있습니다.<br><br>
+변수명에 불과하기 때문에 의미부여가 힘들고,<br><br>
+이를 표현할 명확한 값이 변수명 말고는 없습니다.<br><br>
+이러한 문제점들을 일급컬렉션을 만들면 해결할 수 있습니다.<br><br>
+
+```java
+@Test
+public void 일급_컬렉션의_이름으로() {
+    //given
+    NaverPay naverPay = new NaverPay(createNaverPay());
+    KakaoPay kakaoPay = new KakaoPay(createKakaoPay());
+    
+    //when
+    
+    //then
+}
+```
+이제 클래스로 정해졌기 때문에 명확히 표현할 수 있으며 검색시에도 클래스를 검색하면 되서 훨씬 편합니다.
